sideNavBar correct placing and width, z-index:50 to be above other page elements and using small logo version

--- a/css/style.css
+++ b/css/style.css
@@ -260,6 +260,8 @@ button{
 }
 
 .side-nav{
+  z-index: 50;
+  width: 100%;
   max-width: 384px;
   padding: 1rem 1.5rem;
   background-color: #1C1C1C;
